--- a/BLAZAM/Pages/Install/Authentication.razor
+++ b/BLAZAM/Pages/Install/Authentication.razor
@@ -44,7 +44,7 @@
         </SettingsField>
 
 
-        <MudButton Disabled=saveDisabled Color="Color.Primary" ButtonType="ButtonType.Submit">Save Password</MudButton>
+        <MudButton Disabled=SaveDisabled Color="Color.Primary" ButtonType="ButtonType.Submit">Save Password</MudButton>
     </MudForm>
 
 </div>
