--- a/BLAZAM/Shared/UI/Settings/AuthenticationSetting.razor
+++ b/BLAZAM/Shared/UI/Settings/AuthenticationSetting.razor
@@ -38,7 +38,7 @@
         </SettingsField>
         <SettingsField>
 
-            <MudButton Disabled="saveDisabled" ButtonType="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
+            <MudButton Disabled="SaveDisabled" ButtonType="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
 
         </SettingsField>
 
