--- a/BLAZAM/Shared/UI/Settings/ManualApplicationUpdater.razor
+++ b/BLAZAM/Shared/UI/Settings/ManualApplicationUpdater.razor
@@ -1,12 +1,12 @@
 @inherits AppComponentBase
 
 
-<Code>
+<code>
     Working Directory: @Program.RootDirectory
-</Code>
-<Code>
+</code>
+<code>
     PID: @Program.ApplicationProcess.Id
-</Code>
+</code>
 @if (AutoUpdateService.IsUpdatedScheduled)
 {
     <Alert>
