--- a/BLAZAM/Shared/UI/OU/OUTreeView.razor
+++ b/BLAZAM/Shared/UI/OU/OUTreeView.razor
@@ -15,7 +15,7 @@
                             <MudTreeViewItemToggleButton @bind-Expanded="@context.IsExpanded" Visible="@context.HasChildren()" />
                             <MudIcon Icon="@Icons.Material.Filled.Folder" Class="ml-0 mr-2" Color="@Color.Default" />
                             <MudText>@context.CanonicalName</MudText>
-                            @EndAdornment.Invoke(context)
+                            @EndAdornment?.Invoke(context)
                         </MudBadge>
                     }
                     else
@@ -23,7 +23,7 @@
                         <MudTreeViewItemToggleButton @bind-Expanded="@context.IsExpanded" Visible="@context.HasChildren()" />
                         <MudIcon Icon="@Icons.Material.Filled.Folder" Class="ml-0 mr-2" Color="@Color.Default" />
                         <MudText>@context.CanonicalName</MudText>
-                        @EndAdornment.Invoke(context)
+                        @EndAdornment?.Invoke(context)
                     }
                 </Content>
             </MudTreeViewItem>
@@ -138,12 +138,12 @@
         if (!SelectedOU.Equals(TopLevel))
         {
             IADOrganizationalUnit? openThis = TopLevel;
-            do
+            while (openThis != null) 
             {
                 openThis = openThis.Children.Where(c => SelectedOU.DN.Contains(c.DN) && !SelectedOU.DN.Equals(c.DN)).FirstOrDefault();
                 if (openThis != null)
                     newExpandedNodes.Add(openThis);
-            } while (openThis != null);
+            } 
         }
         ExpandedNodes = newExpandedNodes;
         InvokeAsync(StateHasChanged);
