--- a/BLAZAM/Shared/UI/Settings/Permissions/AccessLevelEditor.razor
+++ b/BLAZAM/Shared/UI/Settings/Permissions/AccessLevelEditor.razor
@@ -1,10 +1,9 @@
 @inherits AppComponentBase
 
-<MudText Typo ="Typo.h1" Size="HeadingSize.Is3">
+<MudText Typo ="Typo.h6" Size="HeadingSize.Is3">
     @SettingsLocalization["Access Levels"]
 </MudText>
 <p> Access levels are a template of permissions that can be applied to specific OU's for specific delegates.</p>
-<LoadingIndicator Visible=LoadingData>
 
     @if (CurrentAccessLevels != null)
     {
@@ -14,23 +13,13 @@
             <ShowAccessLevel Model="ap" />
         }
     }
-    <Accordion>
 
-        <Collapse Visible="@addCollapseVisible">
-            <CollapseHeader>
-                <MudText Typo ="Typo.h1" Size="HeadingSize.Is5">
-                    <MudButton Background=Background.Success  Class="mud-theme-primary" OnClick="@(()=>addCollapseVisible = !addCollapseVisible)">@SettingsLocalization["Add New Access Level"]</MudButton>
-                </MudText>
-            </CollapseHeader>
-            <CollapseBody>
+        <MudExpansionPanel Text="@SettingsLocalization["Add New Access Level"]">
 
                 <EditAccessLevel LevelsChanged="Update" />
 
 
-            </CollapseBody>
-        </Collapse>
-    </Accordion>
-</LoadingIndicator>
+        </MudExpansionPanel>
 
 @code {
     bool addCollapseVisible;
