--- a/BLAZAM/Shared/UI/Settings/Templates/EditDirectoryTemplate.razor
+++ b/BLAZAM/Shared/UI/Settings/Templates/EditDirectoryTemplate.razor
@@ -2,163 +2,146 @@
 @using BLAZAM.Common.Extensions;
 @inherits ValidatedForm
 
-<EditForm OnSubmit="SaveTemplate" Model="DirectoryTemplate">
-    <Row Width="Width.Is100" Margin="Margin.Is2">
-        
+<EditForm OnValidSubmit="SaveTemplate" Model="DirectoryTemplate">
+    <MudStack>
 
-            <MudTextField Label="@SettingsLocalization["Template Name"]" @bind-Value=DirectoryTemplate.Name>
+
+        <MudTextField Label="@SettingsLocalization["Template Name"]" @bind-Value=DirectoryTemplate.Name />
+
+
+
+
+        <MudText>
+            @SettingsLocalization["Template Category"]
+        </MudText>
+
+
+
+
+        <MudCard>
+            Variables:
+            <MudStack>
+                <code>{fn}</code>:First Name<br />
+                <code>{fi}</code>:First Initial<br />
+                <code>{mn}</code>:Middle Name<br />
+
+                <code>{mi}</code>:Middle Initial<br />
+                <code>{ln}</code>:Last Name<br />
+                <code>{li}</code>:Last Initial<br />
+
+                <code>{AlphaNum[:u/l]}</code>:Random letter or number (optional force uppercase/lowercase)<br />
+                <code>{Alpha[:u/l]}</code>:Random letter (optional force uppercase/lowercase)<br />
+                <code>{Num}</code>:Random number<br />
+
+            </MudStack>
+        </MudCard>
+        <Section Title="Account and Name">
+
+
+
+
+            <MudTextField Label="Username Format" @bind-Value=DirectoryTemplate.UsernameFormula>
 
 
 
             </MudTextField>
 
-        
-
-        
-            <MudText>
-                @SettingsLocalization["Template Category"]
-            </MudText>
-                <MudAutocomplete T="string" Label="US States" @bind-Value="DirectoryTemplate.Category" SearchFunc="@SearchCategories"
-                                 ResetValueOnEmptyText="false"
-                                 CoerceText="true" CoerceValue="true"
-                                 AdornmentIcon="@Icons.Material.Filled.Search" AdornmentColor="Color.Primary" />
-             
-
-        
-        <MudCard>
-            Variables:
-            <Row Width="Width.Is100">
-                <Column ColumnSize="ColumnSize.Is6.OnTablet">
-                    <Code>{fn}</Code>:First Name<br />
-                    <Code>{fi}</Code>:First Initial<br />
-                    <Code>{mn}</Code>:Middle Name<br />
-                </Column>
-                <Column ColumnSize="ColumnSize.Is6.OnTablet">
-
-                    <Code>{mi}</Code>:Middle Initial<br />
-                    <Code>{ln}</Code>:Last Name<br />
-                    <Code>{li}</Code>:Last Initial<br />
-                </Column>
-                <Column ColumnSize="ColumnSize.Is6.OnTablet">
-
-                    <Code>{AlphaNum[:u/l]}</Code>:Random letter or number (optional force uppercase/lowercase)<br />
-                    <Code>{Alpha[:u/l]}</Code>:Random letter (optional force uppercase/lowercase)<br />
-                    <Code>{Num}</Code>:Random number<br />
-                </Column>
-
-            </Row>
-        </MudCard>
-        <Section Padding=Padding.Is0 Title="Account and Name">
-
-
-            
-
-                <MudTextField Label="Username Format" @bind-Value=DirectoryTemplate.UsernameFormula>
 
 
 
-                </MudTextField>
-
-            
-            
-
-                <MudTextField Label="Display Name Format" @bind-Value=DirectoryTemplate.DisplayNameFormula>
+            <MudTextField Label="Display Name Format" @bind-Value=DirectoryTemplate.DisplayNameFormula>
 
 
 
-                </MudTextField>
-
-            
-
-            
-
-                    <MudTextField Label="Password" Placeholder="{AlphaNum}{Alpha:U}{Alpha:L}{Num}{Num}{Num}" @bind-Value=DirectoryTemplate.PasswordFormula>
+            </MudTextField>
 
 
 
-                    </MudTextField>
 
-            
+
+            <MudTextField Label="Password" Placeholder="{AlphaNum}{Alpha:U}{Alpha:L}{Num}{Num}{Num}" @bind-Value=DirectoryTemplate.PasswordFormula>
+
+
+
+            </MudTextField>
+
+
 
 
 
         </Section>
-        <Section Padding=Padding.Is0 Title="Fields">
-            <Column ColumnSize="ColumnSize.Is8">
-                <Help Display="Display.InlineFlex">
-                    Fields left blank will be editable by the user on creation.
-                    Fields with values will not be editable.
-                </Help>
-            </Column>
-            <Column ColumnSize="ColumnSize.Is4">
-                <Dropdown Display="Display.InlineFlex">
-                    <DropdownToggle Color="Color.Primary">
-                        Add Field
-                    </DropdownToggle>
-                    <DropdownMenu>
-                        @foreach (var field in fields.OrderBy(f => f.DisplayName))
-                        {
-                            @if (field.FieldName != "samaccountname" &&
-                           field.FieldName != "userPrincipalName" &&
+        <Section Title="Fields">
 
-                           field.FieldName != "sn" &&
-                           field.FieldName != "givenname" &&
-                           field.FieldName != "middleName" &&
-                           field.FieldName != "displayName" &&
-                           field.FieldName != "cn" &&
-                           field.FieldName != "site" &&
-                           field.FieldName != "distinguishedName" &&
-                           field.FieldName != "memberOf" &&
-                           field.FieldName != "objectSID" &&
-                           !DirectoryTemplate.FieldValues.Any(f => f.Field.Equals(field)) &&
-                           field.IsActionAppropriateForObject(DirectoryTemplate.ObjectType))
-                            {
-                                <MudMenuItem OnClick=@(()=>{DirectoryTemplate.FieldValues.Add(new(){ Field=field});}) Color="Color.Secondary">@field.DisplayName</MudMenuItem>
+            Fields left blank will be editable by the user on creation.
+            Fields with values will not be editable.
 
-                            }
+            <MudExpansionPanel Text="Add Field">
 
-                        }
+                @foreach (var field in fields.OrderBy(f => f.DisplayName))
+                {
+                    @if (field.FieldName != "samaccountname" &&
+                   field.FieldName != "userPrincipalName" &&
 
-                    </DropdownMenu>
-                </Dropdown>
-            </Column>
+                   field.FieldName != "sn" &&
+                   field.FieldName != "givenname" &&
+                   field.FieldName != "middleName" &&
+                   field.FieldName != "displayName" &&
+                   field.FieldName != "cn" &&
+                   field.FieldName != "site" &&
+                   field.FieldName != "distinguishedName" &&
+                   field.FieldName != "memberOf" &&
+                   field.FieldName != "objectSID" &&
+                   !DirectoryTemplate.FieldValues.Any(f => f.Field.Equals(field)) &&
+                   field.IsActionAppropriateForObject(DirectoryTemplate.ObjectType))
+                    {
+                        <MudMenuItem OnClick=@(()=>{DirectoryTemplate.FieldValues.Add(new(){ Field=field});}) Color="Color.Secondary">@field.DisplayName</MudMenuItem>
+
+                    }
+
+                }
+
+            </MudExpansionPanel>
 
 
             @foreach (var field in DirectoryTemplate.FieldValues.OrderBy(fv => fv.Field.DisplayName))
             {
-                
-                        <Row>
+
+                <Row>
 
 
-                                <MudTextField Label="@field.Field.DisplayName" @bind-Value=field.Value />
+                    <MudTextField Label="@field.Field.DisplayName" @bind-Value=field.Value />
 
-                                <AppCloseButton OnClick=@(()=>{DirectoryTemplate.FieldValues.Remove(field);InvokeAsync(StateHasChanged);}) />
-                        </Row>
-                
+                    <AppCloseButton OnClick=@(()=>{DirectoryTemplate.FieldValues.Remove(field);InvokeAsync(StateHasChanged);}) />
+                </Row>
+
             }
         </Section>
+
+        @if (SelectedOU != null)
+        {
+
+            <BLAZAM.Server.Shared.UI.OU.OUTreeView Label=@(SettingsLocalization["OU"]+": "+ SelectedOU?.CanonicalName) StartRootExpanded=false @bind-SelectedOU=@SelectedOU @bind-StartingSelectedOU=@SelectedOU>
+                @*  <NodeContent Context="ouContext">
+            @ouContext.Name
+            </NodeContent>*@
+            </BLAZAM.Server.Shared.UI.OU.OUTreeView>
+
+
+        }
+
+
+
+        @foreach (var group in TemplateGroups)
+        {
+            <MudText>@group</MudText>
+        }
+
+        <ADAutoComplete Label="@SettingsLocalization["Groups"]" Multiple @bind-SelectedResult="@SelectedGroup" />
+        <MudFab Icon=@Icons.Material.Filled.Add Color="Color.Primary" OnClick="@(()=>{TemplateGroups.Add(SelectedGroup);})" />
         
-                @if (SelectedOU != null)
-                {
-
-                    <BLAZAM.Server.Shared.UI.OU.OUTreeView Label=@(SettingsLocalization["OU"]+": @SelectedOU?.CanonicalName") StartRootExpanded=false @bind-SelectedOU=@SelectedOU @bind-StartingSelectedOU=@SelectedOU>
-                      @*  <NodeContent Context="ouContext">
-                            @ouContext.Name
-                        </NodeContent>*@
-                    </BLAZAM.Server.Shared.UI.OU.OUTreeView>
 
 
-                }
-
-        
-        
-
-
-                <ADAutoComplete Label="@SettingsLocalization["Groups"]" Multiple @bind-SelectedResults="@SelectedGroups" />
-
-
-        
-    </Row>
+    </MudStack>
 
     @{
         string buttonText = "";
@@ -181,7 +164,9 @@
 
 
 @code {
-    #nullable disable warnings
+    string groupText;
+
+#nullable disable warnings
     bool ouCollapseVisible = true;
     //Validations? validations;
     List<ActiveDirectoryField> fields = new();
@@ -247,7 +232,8 @@
     IADOrganizationalUnit SelectedOU;
 
 
-    List<IDirectoryEntryAdapter> SelectedGroups = new();
+    IDirectoryEntryAdapter SelectedGroup;
+    List<IDirectoryEntryAdapter> TemplateGroups = new();
 
     async Task<IEnumerable<string>> SearchCategories(string searchTerm)
     {
@@ -257,14 +243,14 @@
 
     async Task RefreshGroups()
     {
-        SelectedGroups.Clear();
+        TemplateGroups.Clear();
         if (DirectoryTemplate != null)
         {
             foreach (var sid in DirectoryTemplate.AssignedGroupSids)
             {
                 var temp = Directory.Groups.FindGroupBySID(sid.GroupSid);
                 if (temp != null)
-                    SelectedGroups.Add(temp);
+                    TemplateGroups.Add(temp);
             }
         }
     }
@@ -274,7 +260,8 @@
 
         DirectoryTemplate.ParentOU = SelectedOU.DN;
         DirectoryTemplate.AssignedGroupSids.Clear();
-        foreach (var group in SelectedGroups)
+
+        foreach (var group in TemplateGroups)
         {
             var existing = Context.DirectoryTemplateGroups.Where(g => g.GroupSid == group.SID.ToSidString()).FirstOrDefault();
             if (existing == null)
@@ -282,6 +269,7 @@
             DirectoryTemplate.AssignedGroupSids.Add(existing);
         }
         List<DirectoryTemplateFieldValue> replaceValues = new();
+
         foreach (var field in DirectoryTemplate.FieldValues)
         {
             var trackedField = Context.ActiveDirectoryFields.Where(f => f.Equals(field.Field)).FirstOrDefault();
